feat: add header html file

--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <header>
+        <figure>
+        <img src="IMG_20180901_172805_029.jpg" alt="My photo" height="500">
+        <h1 class="name">Lizaveta Leus</h1>
+        </figure>
+      </header>
   </body>
 </html>
