feat: add main html file

--- a/index.html
+++ b/index.html
@@ -12,5 +12,25 @@
         <h1 class="name">Lizaveta Leus</h1>
         </figure>
       </header>
+      <main>
+        <section>
+        <h2>ABOUT MYSELF</h2>
+        <p class="info_aboutme"> I am 24 years old, not married, no children. My goal now is to gain knowledge in programming. My strong point is curiosity, as well as energy, but at the same time I am persevering and meticulous. I have been working as an accountant for over 5 years. I started out as an assistant accountant, and now I am a deputy chief accountant. </p>
+        <h2>MY SKILLS</h2>
+          <ul class="skills">
+            <li>HTML;</li>
+            <li>CSS;</li>
+            <li>Git;</li>
+          </ul>
+        <h2>CODE EXAMPLE</h2>
+          <ul class="CODE">
+            <li> &lt;p&gt;Hello, World! &lt;p&gt; </li>
+          </ul>
+        <h2>WORK EXPERIENCE</h2>
+        <p class="info_work">I didn’t work as a programmer.</p>
+        <h2>ENGLISH LEVEL</h2>
+        <p class="info-engl">A1 but i’m improving it.</p>
+        </section>
+      </main>
   </body>
 </html>
