--- a/index.html
+++ b/index.html
@@ -32,5 +32,23 @@
         <p class="info-engl">A1 but i’m improving it.</p>
         </section>
       </main>
+      <footer>
+        <section>
+        <h2>CONTACTS</h2>
+         <ul class="info_contacts">
+           <li>Email: lizaleus1996@gmail.com</li>
+           <li>Discord: LIZAVETA#0275</li>
+         </ul>
+        <h2>EDUCATION</h2>
+        <p class="info_education">I graduated from the College of Business and Law with a degree in accountancy and Belarusian State Economic University with a degree in economics.</p>
+        </section>
+        <div class="bottom">
+         <p>2021</p>
+         <a href="https://rs.school/js/" target="_blank">
+            <img src="rs_school_js.svg" alt="RS School" width="100" height="100">
+         </a>
+         <a href="https://github.com/LizaLeus" title="Visit my GitHub account" target="_blank">My GitHub</a>
+        </div>
+      </footer>
   </body>
 </html>
