--- a/index.html
+++ b/index.html
@@ -15,21 +15,28 @@
       <main>
         <section>
         <h2>ABOUT MYSELF</h2>
-        <p class="info_aboutme"> I am 24 years old, not married, no children. My goal now is to gain knowledge in programming. My strong point is curiosity, as well as energy, but at the same time I am persevering and meticulous. I have been working as an accountant for over 5 years. I started out as an assistant accountant, and now I am a deputy chief accountant. </p>
-        <h2>MY SKILLS</h2>
+        <p class="info_aboutme"> I am 24 years old, married, no children. My goal now is to gain knowledge in programming. My strong point is curiosity, as well as energy, but at the same time I am persevering and meticulous. I have been working as an accountant for over 5 years. I started out as an assistant accountant, and now I am a deputy chief accountant. </p>
+        <h2>THE SKILLS I AM LEARNING:</h2>
           <ul class="skills">
             <li>HTML;</li>
             <li>CSS;</li>
-            <li>Git;</li>
+            <li>JavaScript</li>
+            <li>Git/GitHub;</li>
           </ul>
         <h2>CODE EXAMPLE</h2>
-          <ul class="CODE">
-            <li> &lt;p&gt;Hello, World! &lt;p&gt; </li>
-          </ul>
+          <p class="CODE">
+            <code>
+             class App {
+                public static void main(String[] args) {
+                    System.out.println("Hello, World!");
+                }
+             }   
+            </code>
+          </p>
         <h2>WORK EXPERIENCE</h2>
         <p class="info_work">I didn’t work as a programmer.</p>
         <h2>ENGLISH LEVEL</h2>
-        <p class="info-engl">A1 but i’m improving it.</p>
+        <p class="info-engl">A1 (certificate) but I improve my level every day.</p>
         </section>
       </main>
       <footer>
