feat: add css file

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <h2>CODE EXAMPLE</h2>
           <p class="CODE">
             <code>
-             class App {
-                public static void main(String[] args) {
-                    System.out.println("Hello, World!");
-                }
-             }   
+             class App {<br>
+                public static void main(String[] args) {<br>
+                    System.out.println("Hello, World!");<br>
+                }<br>
+             }  <br>
             </code>
           </p>
         <h2>WORK EXPERIENCE</h2>
