fix: change english level in html file

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2>WORK EXPERIENCE</h2>
         <p class="info_work">I didn’t work as a programmer.</p>
         <h2>ENGLISH LEVEL</h2>
-        <p class="info-engl">A1 (certificate) but I improve my level every day.</p>
+        <p class="info-engl">A1, but I improve my level every day.</p>
         </section>
         <section>
           <h2>CONTACTS</h2>
