--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
         <figure>
         <img src="IMG_20180901_172805_029.jpg" alt="My photo" height="500">
-        <h1 class="name">Lizaveta Leus</h1>
+        <h1 class="name">LIZAVETA LEUS</h1>
         </figure>
       </header>
       <main>
